@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
 -bug#0001549: Database crashes with use of array_to_sql_or
 -bug#0001557: Quotes in Text Format graph template field breaks graph
+-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
 -bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
 -bug#0001600: Default action on lists should be "None" 
 -bug: remove graph permissions if graph is removed
